--- a/Web/divClass.css
+++ b/Web/divClass.css
@@ -1,76 +1,83 @@
-
-#line{
+#line {
     list-style-type: none;
     background-color: deepskyblue;
 }
 
+.div-main1 {
+    width: 100%;
+    height: 800px;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
 
-.one{
-    background-color: deepskyblue;
+.one {
+    background-color: rgb(195, 221, 230);
     width: 10%;
     height: 100%;
-
-    /*position: relative;
-    left: 0px;
-    top: 0px;*/
+    border: 2px solid deepskyblue;
     float: left;
 }
-.two{
+
+.two {
     width: 90%;
     height: 100%;
     border: 2px solid deepskyblue;
-/*
-    position: relative;
-    float: left;*/
+
 }
 
-/*.one:nth-child{*/
-/*    border-radius: 10px;*/
-/*    background-color: white;*/
-/*}*/
+#grad {
+    background-image: linear-gradient(to bottom right, #66ccff, #bbbb88);
+}
 
-#document{
-    border-radius: 10px;
-    text-align: center;
-    font-size: x-large;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+
+    background-color: #f1f1f1;
+}
+
+li {
     width: 100%;
     height: 20%;
+    text-align: center;
+    font-size: xx-large;
+    line-height: 160px;
+
 }
 
-#activity{
+li a {
+    height: 100%;
+    display: block;
+    color: #000;
+
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: greenyellow;
+    /* color: white; */
+}
+
+@media (min-width: 600px) {}
+
+
+
+.OneChild {
+    box-sizing: border-box;
     border-radius: 10px;
-    text-align: center;
-    font-size: x-large;
     width: 100%;
     height: 20%;
-}
-
-#bolg{
-
-    border-radius: 10px;
-    text-align: center;
     font-size: x-large;
-    width: 100%;
-    height: 20%;
-}
-
-#game{
-    border-radius: 10px;
     text-align: center;
-    font-size: x-large;
-    width: 100%;
-    height: 20%;
+    line-height: 160px
 }
 
-#manage{
-    border-radius: 10px;
-    text-align: center;
-    font-size: x-large;
-    width: 100%;
-    height: 20%;
-}
-
-.hover-div:hover{
+.OneChild:hover {
     background-color: aquamarine;
-}
 
+}
